--- a/styles/_viewSchedule.scss
+++ b/styles/_viewSchedule.scss
@@ -335,8 +335,8 @@
 		}
 	}
 	
-	.timestamps .start	{
-		opacity: .3;
+	.timestamps:not(.editing) .next	{
+		opacity: 0;
 		transition: opacity .3s;
 		
 		&:hover	{
