--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -78,7 +78,7 @@ ul.action-list {
 
 table	{
 	width: 100%;
-	margin-top: 4rem;
+	//margin-top: 4rem;
 	
 	&.no-topspace {
 		margin-top: 0;
@@ -308,4 +308,42 @@ button	{
 			background-color: inherit;
 		}
 	}		
+}
+
+/************************
+*		SCROLLBARS		*
+************************/
+
+.iScrollVerticalScrollbar, .iScrollHorizontalScrollbar	{
+	position: absolute;
+}
+
+.iScrollHorizontalScrollbar	{
+	height: 8px;
+	bottom: 10px;
+	left: 5px;
+	right: 20px;
+	z-index: 9;
+	
+	.iScrollIndicator	{
+		height: 100%;
+	}
+}
+
+.iScrollVerticalScrollbar	{
+	width: 8px;
+	right: 5px;
+	top: 5px;
+	bottom: 5px;
+	z-index: 9;
+	
+	.iScrollIndicator	{
+		width: 100%;
+	}
+}
+
+.iScrollIndicator	{
+	border-radius: 4px;
+	background-color: $black;
+	opacity: .2;
 }
