--- a/styles/_viewSchedule.scss
+++ b/styles/_viewSchedule.scss
@@ -153,6 +153,17 @@
 				border-top: 2px solid $white;
 				//z-index: 2;
 			}
+			
+			.now-top	{
+				position: absolute;
+				width: $bigUnit - 2rem;
+				margin: 0 1rem;
+
+				top: (14.61*120px);
+				
+				border-top: 2px dotted $transparentwhite;
+				z-index: 2;
+			}
 		}
 		
 		.column-details	{
@@ -273,7 +284,7 @@
 	cursor: pointer;
 	overflow: hidden;
 	
-	box-shadow: 0px 0px 5px rgba(0,0,0,.1);
+	box-shadow: 0px 0px 7px rgba(0,0,0,.25);
 
 	.header	{
 		border-radius: 3px 3px 0 0;
@@ -290,6 +301,17 @@
 			width: 2rem;
 			height: 2rem;
 		}
+		
+		.naht	{
+			opacity: 0;
+			transition: opacity 1s;
+			
+			&.active	{
+				opacity: 1;
+			}
+		}
+		
+		transition: background-color 1s;
 	}
 	
 	.main	{
@@ -346,6 +368,18 @@
 
 .card-details-container	{
 	padding-bottom: $smallUnit/2;
+	
+	&:before	{
+		content: "";
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		pointer-events: none;
+		box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,.5);	
+		z-index: 10;
+	}
 		
 	.header	{
 		padding: $smallUnit/2 $smallUnit;
