--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -32,6 +32,14 @@ $grey2: #494b4c;
 $grey1: #5c5e60;
 $grey0: hsl(0,0,60);
 
+$grey6: hsl(210,30,10);
+$grey5: hsl(210,20,12);
+$grey4: hsl(210,20,15);
+$grey3: hsl(210,15,18);
+$grey2: hsl(210,10,29);
+$grey1: hsl(210,10,21);
+$grey0: hsl(210,5,60);
+
 $transparentwhite: rgba(255,255,255, .1);
 
 
